--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/load": "^6.2.7",
     "@types/bcrypt": "^3.0.0",
     "@types/connect-mongo": "^3.1.3",
     "@types/cors": "^2.8.10",
@@ -22,6 +23,7 @@
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.31",
     "@types/nodemon": "^1.19.0",
+    "apollo-server-express": "^2.21.0",
     "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
@@ -30,6 +32,7 @@
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "graphql-tools": "^4.0.8",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
@@ -47,5 +50,8 @@
     ],
     "exec": "npm start",
     "ext": "ts"
+  },
+  "devDependencies": {
+    "ts-node-dev": "^1.1.6"
   }
 }
