--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,8 @@
 DB_PATH = 'mongodb://localhost:27017/db'
-DB_USER = login
-DB_PASS = password
+DB_NAME=typeScriptStore
+DB_USER=postgres
+DB_PASSWORD=1
+DB_HOST=localhost
+DB_PORT=5432
 SESSION_SECRET = 'dsf3asf4sa54fs6afs3f'
 SESSION_DB_PATH = 'mongodb://localhost:27017/dbSession'
