--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,8 @@
     "graphql-tools": "^4.0.8",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
+    "pg": "^8.5.1",
+    "sequelize": "^6.5.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
   },
