--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.31",
     "@types/nodemon": "^1.19.0",
+    "@types/sequelize": "^4.28.9",
     "apollo-server-express": "^2.21.0",
     "bcrypt": "^5.0.0",
     "connect-mongo": "^3.2.0",
