--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.1",
+    "faker": "^5.4.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^4.0.8",
     "mongoose": "^5.11.13",
@@ -55,6 +56,7 @@
     "ext": "ts"
   },
   "devDependencies": {
+    "@types/faker": "^5.1.7",
     "ts-node-dev": "^1.1.6"
   }
 }
